<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, MeugeActivity!</string>
    <string name="app_name">GeoMeugisation</string>
	<string name="mapskey">0JvwL-yIit1thjxATDo5RdBbeqqYjNz1QAasVkg</string>
	<string name="database_file_interne">/monmeuge.db4o</string>
	<string name="database_file_externe">/meuge/poimeuge.db4o</string>
	<string name="log_file_externe">/meuge/logs.txt</string>
	<string name="log_enable">true</string>
	<drawable name="white">#ffffff</drawable>
    <drawable name="blue">#2554C7</drawable>
    <drawable name="green">#347C2C</drawable>
    <drawable name="orange">#ff9900</drawable>
    <drawable name="pink">#FF00FF</drawable>
    <drawable name="violet">#a020f0</drawable>
    <drawable name="gray">#778899</drawable>
    <drawable name="red">#C11B17</drawable>
    <string name="deconnection">Deconnection</string>
    <string name="login">Login :</string>
 	<string name="password">Password :</string>
 	<string name="password2">Retype Password :</string>
 	<string name="entretonprenom">SVP Entrez votre Login</string>
 	<string name="inscription">Inscription chez MEUGE</string>
 	<string name="inscript">Inscription</string>
 	<string name="bouton">Envoyer</string>
 	<string name="bouton_retour">Retour</string>
</resources>