<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout
android:layout_width="fill_parent"
android:layout_height="fill_parent"
xmlns:android="http://schemas.android.com/apk/res/android"
>
<EditText android:layout_width="200px" android:layout_height="wrap_content" android:textSize="18sp" android:id="@+id/txt_username" android:layout_y="132dip" android:layout_x="128dip" android:singleLine="true"></EditText>
<EditText android:layout_width="200px" android:layout_height="wrap_content" android:textSize="18sp" android:password="true" android:id="@+id/txt_password" android:layout_x="128dip" android:layout_y="192dip" android:singleLine="true"></EditText>

<Button
    android:id="@+id/btn_login"
    android:layout_width="91dp"
    android:layout_height="wrap_content"
    android:layout_x="178dip"
    android:layout_y="252dip"
    android:text="@string/bouton" >
</Button>
<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/lbl_username" android:text="@string/login" android:layout_x="29dip" android:layout_y="150dip"></TextView>
<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/lbl_password" android:text="@string/password"  android:layout_x="29dip" android:layout_y="207dip"></TextView>
<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/lbl_top" android:textSize="16sp" android:typeface="sans" android:text="@string/entretonprenom" android:layout_x="29dip" android:layout_y="94dip"></TextView>

<TextView
    android:id="@+id/lbl_result"
    android:layout_width="156dp"
    android:layout_height="wrap_content"
    android:layout_x="50dip"
    android:layout_y="312dip"
    android:textColor="@color/couleurMessage"
    android:textSize="@dimen/dimMessage" >
</TextView>

<Button
    android:id="@+id/deconnection"
    android:layout_width="138dp"
    android:layout_height="wrap_content"
    android:layout_x="86dp"
    android:layout_y="6dp"
    android:text="@string/deconnection" />

</AbsoluteLayout>